# txt2txn

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
src/: handler.py  swap.py  transfer.py  utils.py
src/prompt/: extract_prompt_template.txt
